# misc

firefly/: firefly.html
happ/: Main.hs  happ.cabal
tris/: tris.html
