cabal-version:       >=1.10

name:                happ
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:
maintainer:
-- copyright:
-- category:
build-type:          Simple
extra-source-files:

executable happ
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base
                     , random
                     , happstack-server
                     , mtl
                     , time
                     , blaze-html
  -- hs-source-dirs:
  default-language:    Haskell2010
